Add new files and updates

--- a/app/styles.module.css
+++ b/app/styles.module.css
@@ -435,7 +435,7 @@
         font-size: 18px;
     }
     .productsTitle h2 {
-        font: 16px;
+        font-size: 18px;
     }
     .titleLink {
         font-size: 19px;
