--- a/app/globals.css
+++ b/app/globals.css
@@ -2,20 +2,25 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+  /* font-family: "Noto Sans Arabic"; */
 }
 :root {
   --primary-color: #b80000;
 }
 body {
-  font-family: "cairo Arial";
   direction: rtl;
 }
 .main {
   width: 100%;
   min-height: 100vh;
 }
+.mainContainer {
+  width: 100%;
+  min-height: 100vh;
+  padding: 0 4%;
+}
 .card {
-  width: 200px;
+  width: 250px;
   height: 300px;
   display: flex;
   justify-content: space-between;
@@ -91,6 +96,6 @@ body {
     display: none !important;
   }
   .card {
-    width: 150px;
+    width: 190px;
   }
 }
