--- a/app/styles.module.css
+++ b/app/styles.module.css
@@ -20,6 +20,9 @@
     height: 100%;
     padding: 10px 0;
 }
+.swiperCards {
+    width: 100%;
+}
 .swiperContent {
     position: relative;
     width: 100%;
@@ -45,7 +48,7 @@
     margin-top: 50px;
 }
 .textInfo {
-    width: 90%;
+    width: 100%;
     height: 50px;
     border-radius: 8px;
     background-color: rgba(184, 0, 0, 0.274);
@@ -64,10 +67,10 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 50px 0;
+    padding: 30px 0;
 }
 .banner {
-    width: 90%;
+    width: 100%;
     height: 250px;
     background-color: #38b98e34;
     border-radius: 8px;
@@ -237,46 +240,6 @@
     border-radius: 8px;
     cursor: pointer;
 }
-.prands {
-    width: 100%;
-    height: fit-content;
-    padding: 10px 4%;
-}
-.prandsContent {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-wrap: wrap;
-    gap: 10px;
-}
-.prandLink {
-    text-decoration: none;
-    border: 1px solid rgba(0, 0, 0, 0.5);
-    border-radius: 8px;
-}
-.btnContainer {
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 20px 0;
-}
-.btnLink {
-    width: 90%;
-    text-align: center;
-    background-color: transparent;
-    font-size: 25px;
-    text-decoration: none;
-    color: #38b98e;
-    border: 2px solid #38b98e;
-    border-radius: 8px;
-    padding: 7px;
-    transition: .3s;
-}
-.btnLink:hover {
-    background-color: #38b98e;
-    color: white;
-}
 .imagesContainer {
     width: 100%;
     height: fit-content;
@@ -324,7 +287,7 @@
 .reviews {
     width: 100%;
     height: fit-content;
-    padding: 50px 4%;
+    padding: 50px;
     background-color: #E5F8FF;
 }
 .reviewsTitle h2 {
@@ -412,9 +375,6 @@
         width: 90%;
         height: 140px;
     }
-    .bannerContainer {
-        padding: 20px ;
-    }
     .content {
         flex-direction: column-reverse;
         padding: 10px 0;
@@ -435,7 +395,7 @@
         font-size: 18px;
     }
     .productsTitle h2 {
-        font-size: 18px;
+        font-size: 20px;
     }
     .titleLink {
         font-size: 19px;
