--- a/app/components/Footer/styles.module.css
+++ b/app/components/Footer/styles.module.css
@@ -32,18 +32,18 @@
     justify-content: center;
     align-items: center;
     text-decoration: none;
-    font-size: 40px;
+    font-size: 30px;
     color: white;
 }
 .logoImage {
-    width: 80px;
-    height: 80px;
+    width: 60px;
+    height: 60px;
 }
 .rightContent {
     width: 100%;
 }
 .rightContent p {
-    font-size: 25px;
+    font-size: 20px;
 }
 .middleSide {
     width: 30%;
@@ -53,7 +53,7 @@
 }
 .title h2 { 
     color: white;
-    font-size: 40px;
+    font-size: 30px;
 }
 .middleContent {
     width: 100%;
@@ -67,7 +67,7 @@
 .footerLinks {
     text-decoration: none;
     color: white;
-    font-size: 25px;
+    font-size: 20px;
 }
 .bottom {
     width: 100%;
@@ -78,7 +78,7 @@
 
 }
 .bottom h2 {
-    font-size: 30px;
+    font-size: 20px;
 }
 
 @media(max-width: 767px) {
@@ -97,5 +97,9 @@
     .leftSide {
         width: 100%;
         text-align: center;
+    }
+    .footerTitle {
+        justify-content: center;
+        align-items: center;
     }
 }
