--- a/app/changeInfo/[id]/styles.module.css
+++ b/app/changeInfo/[id]/styles.module.css
@@ -8,9 +8,8 @@
     flex-direction: column;
 }
 .imageContainer {
-    position: relative;
-    width: 80%;
-    height: 500px;
+    width: 300px;
+    height: 300px;
     display: flex;
     justify-content: center;
     align-items: center;
