--- a/app/create/styles.module.css
+++ b/app/create/styles.module.css
@@ -1,10 +1,10 @@
 .btn {
-    width: 80%;
-    background-color: black;
+    width: 100%;
+    background-color: var(--darck-green);
     color: white;
     padding: 5px;
     font-size: 25px;
     border: none;
-    border-radius: 8px;
+    border-radius: 28px;
     cursor: pointer;
 }
