--- a/app/globals.css
+++ b/app/globals.css
@@ -2,103 +2,121 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
-  font-family: "Cairo";
+  font-family: "Cal Sans";
 }
 :root {
-  --primary-color: #b80000;
+  --green-color: #b9f781;
+  --darck-green: #004d25;
+  --gray-color: #e6e5e5;
 }
-body {
-  direction: rtl;
-}
+
 .main {
   width: 100%;
   min-height: 100vh;
 }
-.mainContainer {
+.title {
   width: 100%;
-  min-height: 100vh;
-  padding: 0 4%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-bottom: 30px;
+}
+.title h2 {
+  color: #333;
+  font-size: 35px;
+}
+.titleLink {
+  text-decoration: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 5px;
+  color: var(--darck-green);
+}
+.titleLink span:first-child {
+  font-size: 17px;
 }
 .card {
-  width: 250px;
-  height: 300px;
+  width: 200px;
+  height: fit-content;
   display: flex;
   justify-content: space-between;
   align-items: center;
   flex-direction: column;
   padding: 10px 0;
-  border-radius: 8px;
-  transition: .3s;
-}
-.card:hover {
-  box-shadow: 0 15px 15px black;
 }
 .cardHead {
-  position: relative;
-  width: 100%;
-  height: 70%;
-}
-.cardBody {
-  width: 100%;
-  padding: 0 2%;
+  width: 200px;
+  height: 200px;
+  background-color: var(--gray-color);
+  border-radius: 28px 28px 0 0;
   display: flex;
   justify-content: center;
   align-items: center;
-  flex-direction: column;
-  gap: 10px;
 }
-.bodyText {
+.cardBody {
+  background-color: white;
   width: 100%;
-  text-align: start;
+  height: fit-content;
+  padding: 10px;
   display: flex;
   justify-content: start;
   align-items: start;
   flex-direction: column;
-  gap: 5px;
-  font-size: 17px;
+  gap: 15px;
 }
-.formContent {
+.cardContent {
   width: 100%;
-  min-height: calc(100vh - 180px);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.inputContainer {
+  width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  gap: 30px;
-}
-.inputContainer {
-  width: 80%;
-  display: flex;
-  flex-direction: column;
-  gap: 10px;
+  gap: 5px;
 }
 .inputContainer label {
-  font-size: 30px;
-  color: black;
+  width: 100%;
 }
 .inputContainer input {
-  padding: 7px;
-  border: 1px solid black;
+  width: 100%;
+  border: 1px solid #333;
+  border-radius: 28px;
+  font-size: 18px;
   outline: none;
-  border-radius: 8px;
+  padding: 7px;
 }
 .inputContainer select {
+  width: 100%;
+  border: 1px solid #333;
   padding: 7px;
-  border: 1px solid black;
-  outline: none;
-  border-radius: 8px;
+  border-radius: 28px;
+  font-size: 18px;
+}
+.formContent {
+  width: 100%;
+  height: fit-content;
+  padding: 50px 2%;
+  padding-bottom: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  gap: 15px;
 }
 
-
 @media(max-width: 767px) {
-  .swiper-button-next,
-  .swiper-button-prev{
-    display: none !important;
+  .title h2 {
+      font-size: 25px;
   }
-  .card {
-    width: 190px;
+  .titleLink { 
+      font-size: 18px;
   }
-  .inputContainer label {
-    font-size: 20px;
+  .titleLink span:first-child {
+      font-size: 18px;
   }
 }
