--- a/app/info/[productInfo]/styles.module.css
+++ b/app/info/[productInfo]/styles.module.css
@@ -8,9 +8,8 @@
     flex-direction: column;
 }
 .imageContainer {
-    position: relative;
-    width: 80%;
-    height: 500px;
+    width: 300px;
+    height: 300px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -45,7 +44,7 @@
     gap: 15px;
 }
 .infoItems p span:first-child {
-    color: #38b98e;
+    color: var(--darck-green);
 }
 .infoItems p span:last-child {
     color: rgb(100, 100, 100);
@@ -54,12 +53,16 @@
     width: 100%;
     padding: 5px;
     color: white;
-    background-color: #38b98e;
+    background-color: var(--darck-green);
     border: none;
-    border-radius: 8px;
+    border-radius: 28px;
     font-size: 25px;
     cursor: pointer;
     margin-top: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 5px;
 }
 
 @media(max-width: 767px) {
